[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghfinder"
version = "0.1.0"
description = "GitHub repository search and analysis CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.2",
]

[project.scripts]
ghfinder = "ghfinder.cli:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "responses"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ghfinder*"]
